Added --spamclear-days, --spamclear-size and --spamclear-none options to modify-spam.pl.
When a mailbox or domain owner is deleted, all of his Cron jobs will be removed too. Similarly, the owner of any Cron jobs will be correctly updated when a useris renamed.
Broke the Update Virtual Servers page down into more readable collapsed sections.
Removed redundant creation buttons from main page, when using the framed theme.
Added a link from the Edit Virtual Server page to show a server's current password.
Added the PHP Versions page (under Server Configuration on the left menu) for selecting the version of PHP to run for a virtual server. This can also be configured differently on a per-directory basis.
Added the list-php-directories.pl, set-php-directory.pl and delete-php-directory.pl scripts for changing PHP version from the command line or remote API.
Updated the Update Virtual Servers page to allow the default PHP version and PHP execution mode to be changed on multiple servers at once.
Changed the script installer process to automatically use the correct PHP version required by the script, if available.
Fixed the PHP Support script installer to automatically setup the database connection details for version 2.2.
IMAP passwords for Usermin users are automatically updated when changed in Usermin.
---- Changes since 3.34 ----
Updated the MediaWiki script installer to version 1.9.2, and TWiki to version 4.1.1.
When a mailbox user's password is changed in other modules, it is also updated in Virtualmin's plain-text password file.
Added new pages for easily editing HTML in a virtual server's website.
---- Changes since 3.35 ----
PHP and Pear modules needed by script installers are now automatically installed when needed, if supported by the underlying operating system's update service (APT or YUM).