@@ -36,11 +36,7 @@
    created by resellers.
 	- When creating domain, plan can override template.
 
-  - Better integration of protected web directories
-	- Release when Virtualmin 3.35 is out
-
   - Fix mediawiki script installer to be friendlier
 
   - Ruby support
 	- GEMS installer
-	- fcgi support in Virtualmin
