@@ -2048,6 +2048,7 @@ tmpl_disabled_urlsel=Redirect to $1
 tmpl_disabled_urlnone=None (local HTML)
 tmpl_phpmode=Default PHP exection mode
 tmpl_phpver=Default PHP version
+tmpl_rubymode=Default Ruby execution mode
 tmpl_phpverdef=Lowest available
 tmpl_edisabled_url=Missing or invalid disabled website URL
 tmpl_php_vars=PHP configuration variables for scripts
@@ -2062,6 +2063,7 @@ tmpl_dbs=Edit Default Databases
 tmpl_return=template
 tmpl_ephpsuexec=PHP scripts cannot be run as the domain owner unless suexec is enabled
 tmpl_ephpcmd=PHP scripts cannot be run as the domain owner unless the <tt>php</tt> command is installed
+tmpl_erubycmd=Ruby scripts cannot be run as the domain owner unless the <tt>ruby</tt> command is installed
 tmpl_editmode=Edit template section:
 tmpl_switch=Change
 tmpl_editmode_basic=Basic settings and usage
@@ -2657,6 +2659,8 @@ massdomains_phpver=Default PHP version
 massdomains_phpvering=Changing default PHP version ..
 massdomains_phpmode=PHP execution mode
 massdomains_phpmoding=Changing PHP execution mode ..
+massdomains_rubymode=Ruby execution mode
+massdomains_rubymoding=Changing Ruby execution mode ..
 
 newmxs_title=Secondary Mail Servers
 newmxs_header=Automatic secondary mail servers
@@ -2977,6 +2981,9 @@ phpmode_err=Failed to save website options
 phpmode_suexec=Run CGI scripts as domain owner?
 phpmode_esuexec=The <b>CGI wrapper</b> option cannot be selected unless <b>Run CGI scripts as domain owner</b> is
 phpmode_emodsuexec=The <b>Run CGI scripts as domain owner</b> option cannot be enabled unless the Apache <tt>mod_suexec</tt> module is installed
+phpmode_rubymode=Ruby script execution mode
+phpmode_mod_ruby=Apache <tt>mod_ruby</tt> (run as Apache's user)
+phpmode_noruby=Ruby scripts disabled
 
 spf_title=DNS Options
 spf_enable=Enabling SPF ..
